--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Utility Tracker</title>
   </head>
   <body>
+    <div>hello</div>
     <div id="root"></div>
     <script type="module" src="/client/bundle.js"></script>
   </body>
